--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li class="about-websudio-list-item one-card">
                         <div class="feature-item-container">
                             <svg class="feature-item-img" width="64" height="64">
-                                <use href="./images/sprite.svg#icon-Group"></use>
+                                <use href="./images/icons.svg#icon-Group"></use>
                             </svg>
                         </div>
                         <h3 class="header-three">Strategy</h3>
@@ -80,7 +80,7 @@
                     <li class="about-websudio-list-item one-card">
                         <div class="feature-item-container">
                             <svg class="feature-item-img" width="64" height="64">
-                                <use href="./images/sprite.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="header-three">Punctuality</h3>
@@ -93,7 +93,7 @@
                     <li class="about-websudio-list-item one-card">
                         <div class="feature-item-container">
                             <svg class="feature-item-img" width="64" height="64">
-                                <use href="./images/sprite.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="header-three" >Diligence</h3>
@@ -105,7 +105,7 @@
                     <li class="about-websudio-list-item one-card">
                         <div class="feature-item-container">
                             <svg class="feature-item-img" width="64" height="64">
-                                <use href="./images/sprite.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="header-three">Technologies</h3>
@@ -129,22 +129,22 @@
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-instagram"></use>
+                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-twitter"></use>
+                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-facebook"></use>
+                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -159,22 +159,22 @@
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-instagram"></use>
+                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-twitter"></use>
+                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-facebook"></use>
+                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -189,22 +189,22 @@
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-instagram"></use>
+                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-twitter"></use>
+                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-facebook"></use>
+                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -219,22 +219,22 @@
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-instagram"></use>
+                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-twitter"></use>
+                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-facebook"></use>
+                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
                                     <svg width="40" height="40">
-                                        <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -316,22 +316,22 @@
                 <div class="footer-info-social-icon-container">
                 <a href="" class="footer-info-social-icon-item">
                     <svg width="40" height="40">
-                        <use xlink:href="./images/sprite.svg#icon-instagram"></use>
+                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
                 <a href="" class="footer-info-social-icon-item">
                     <svg width="40" height="40">
-                        <use xlink:href="./images/sprite.svg#icon-twitter"></use>
+                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 <a href="" class="footer-info-social-icon-item">
                     <svg width="40" height="40">
-                        <use xlink:href="./images/sprite.svg#icon-facebook"></use>
+                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
                 <a href="" class="footer-info-social-icon-item">
                     <svg width="40" height="40">
-                        <use xlink:href="./images/sprite.svg#icon-linkedin"></use>
+                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
                 </div>
