--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title> 
+    <title>goit-markup-hw-01</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" 
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet" 
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
 
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
@@ -28,17 +27,17 @@
         <div class="container header-container">
             <nav class="nav-menu">
                 <a href="./index.html" class="logo-link">
-                Web
-                <span class="logo-studio"> Studio </span>
+                    Web
+                    <span class="logo-studio"> Studio </span>
                 </a>
-                <ul class="nav-menu-list">  
+                <ul class="nav-menu-list">
                     <li> <a href="./index.html" class="logo-web">Studio</a> </li>
                     <li> <a href="" class="logo-web">Portfolio</a> </li>
                     <li> <a href="" class="logo-web">Contacts</a> </li>
                 </ul>
             </nav>
 
-        <!-- Contacts -->
+            <!-- Contacts -->
             <address class="address-title">
                 <ul class="address-list">
                     <li> <a href="mailto:info@devstudio.com" class="address-font">info@devstudio.com</a></li>
@@ -85,7 +84,8 @@
                         </div>
                         <h3 class="header-three">Punctuality</h3>
                         <p class="body-text">
-                            Bring the key message to the brand's audience for the best price within the shortest possible
+                            Bring the key message to the brand's audience for the best price within the shortest
+                            possible
                             time.
                         </p>
                     </li>
@@ -96,9 +96,10 @@
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="header-three" >Diligence</h3>
+                        <h3 class="header-three">Diligence</h3>
                         <p class="body-text">
-                            Research and confirm brands with the strongest digital growth opportunities and minimize risk.
+                            Research and confirm brands with the strongest digital growth opportunities and minimize
+                            risk.
                         </p>
                     </li>
 
@@ -109,7 +110,8 @@
                             </svg>
                         </div>
                         <h3 class="header-three">Technologies</h3>
-                        <p class="body-text">Design practice focused on digital experiences. We bring forth a deep passion for
+                        <p class="body-text">Design practice focused on digital experiences. We bring forth a deep
+                            passion for
                             problem-solving.</p>
                     </li>
                 </ul>
@@ -122,7 +124,7 @@
                 <h2 class="header-two">Our Team</h2>
                 <ul class="team-list">
                     <li class="team-card one-card">
-                        <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260"/>
+                        <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260" />
                         <div class="team-card-name">
                             <h3 class="header-three">Mark Guerrero</h3>
                             <p class="body-text">Product Designer</p>
@@ -212,7 +214,7 @@
                     </li>
 
                     <li class="team-card one-card">
-                        <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260"/>
+                        <img src="./images/img.jpg" alt="Daniel Wilson" width="264" height="260" />
                         <div class="team-card-name">
                             <h3 class="header-three">Daniel Wilson</h3>
                             <p class="body-text">UI Designer</p>
@@ -250,90 +252,89 @@
                 <h2 class="header-two">Our Portfolio</h2>
                 <ul class="our-portfolio-list">
                     <li class="our-portfolio-list-item one-card">
-                        <img src="./images/img-4.jpg" alt="Banking app" width="360" height="300" style="text-align: center;" />
+                        <img src="./images/img-4.jpg" alt="Banking app" width="360" height="300"
+                            style="text-align: center;" />
                         <div class="our-portfolio-list-item-text">
-                        <h3 class="header-three">Banking App</h3>
-                        <p class="body-text">App</p>
+                            <h3 class="header-three">Banking App</h3>
+                            <p class="body-text">App</p>
                         </div>
                     </li>
                     <li class="our-portfolio-list-item one-card">
                         <img src="./images/img-5.jpg" alt="Cashless Payment" width="360" height="300" />
                         <div class="our-portfolio-list-item-text">
-                        <h3 class="header-three">Cashless Payment</h3>
-                        <p class="body-text">Marketing</p>
+                            <h3 class="header-three">Cashless Payment</h3>
+                            <p class="body-text">Marketing</p>
                         </div>
                     </li>
                     <li class="our-portfolio-list-item one-card">
                         <img src="./images/img-6.jpg" alt="Meditation App" width="360" height="300" />
                         <div class="our-portfolio-list-item-text">
-                        <h3 class="header-three">Meditation App</h3>
-                        <p class="body-text">App</p>
+                            <h3 class="header-three">Meditation App</h3>
+                            <p class="body-text">App</p>
                         </div>
                     </li>
                     <li class="our-portfolio-list-item one-card">
                         <img src="./images/img-7.jpg" alt="Taxi Service" width="360" height="300" />
                         <div class="our-portfolio-list-item-text">
-                        <h3 class="header-three">Taxi Sevice</h3>
-                        <p class="body-text">Marketing</p>
+                            <h3 class="header-three">Taxi Sevice</h3>
+                            <p class="body-text">Marketing</p>
                         </div>
                     </li>
                     <li class="our-portfolio-list-item one-card">
                         <img src="./images/img-8.jpg" alt="Screen Illustrations" width="360" height="300" />
                         <div class="our-portfolio-list-item-text">
-                        <h3 class="header-three">Screen Illustrations</h3>
-                        <p class="body-text">Design</p>
+                            <h3 class="header-three">Screen Illustrations</h3>
+                            <p class="body-text">Design</p>
                         </div>
                     </li>
                     <li class="our-portfolio-list-item one-card">
                         <img src="./images/img-9.jpg" alt="Online Courses" width="360" height="300" />
                         <div class="our-portfolio-list-item-text">
-                        <h3 class="header-three">Online Courses</h3>
-                        <p class="body-text">Marketing</p>
+                            <h3 class="header-three">Online Courses</h3>
+                            <p class="body-text">Marketing</p>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-         
+
     </main>
 
     <!-- Footer -->
     <footer class="footer-part">
         <div class="container footer-container">
             <div class="footer-site-info">
-            <a href="./index.html" class="logo-and"
-            >Web<span class="logo-studios">Studio </span></a
-            >
-            <p class="footer-and">
-                Increase the flow of customers and sales for your business with digital 
-                marketing & growth solutions.
-            </p>
+                <a href="./index.html" class="logo-and">Web<span class="logo-studios">Studio </span></a>
+                <p class="footer-and">
+                    Increase the flow of customers and sales for your business with digital
+                    marketing & growth solutions.
+                </p>
             </div>
             <div class="footer-social-icon">
                 <h3>Social media</h3>
 
-            
+
                 <div class="footer-info-social-icon-container">
-                <a href="" class="footer-info-social-icon-item">
-                    <svg width="40" height="40">
-                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-                <a href="" class="footer-info-social-icon-item">
-                    <svg width="40" height="40">
-                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                </a>
-                <a href="" class="footer-info-social-icon-item">
-                    <svg width="40" height="40">
-                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-                <a href="" class="footer-info-social-icon-item">
-                    <svg width="40" height="40">
-                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                </a>
+                    <a href="" class="footer-info-social-icon-item">
+                        <svg width="40" height="40">
+                            <use xlink:href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                    <a href="" class="footer-info-social-icon-item">
+                        <svg width="40" height="40">
+                            <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                    <a href="" class="footer-info-social-icon-item">
+                        <svg width="40" height="40">
+                            <use xlink:href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                    <a href="" class="footer-info-social-icon-item">
+                        <svg width="40" height="40">
+                            <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </div>
