--- a/index.html
+++ b/index.html
@@ -130,23 +130,23 @@
                             <p class="body-text">Product Designer</p>
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -160,23 +160,23 @@
                             <p class="body-text">Frontend Developer</p>
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -190,23 +190,23 @@
                             <p class="body-text">Marketing</p>
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -220,23 +220,23 @@
                             <p class="body-text">UI Designer</p>
                             <div class="member-info-social-icon-container">
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-instagram"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-twitter"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-facebook"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 <a href="" class="member-info-social-icon-item">
-                                    <svg width="40" height="40">
-                                        <use xlink:href="./images/icons.svg#icon-linkedin"></use>
+                                    <svg>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </div>
