--- a/index.html
+++ b/index.html
@@ -130,26 +130,34 @@
                             <p class="body-text">Product Designer</p>
                             <div class="member-info-social-icon-container">
                                 <ul class="social-media-list">
-                                        <li class="member-info-social-icon-item">
-                                            <svg class="social-media-icon">
+                                    <li class="social-media-item">
+                                        <a href="#" class="social-media-link">
+                                            <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
                                                 <use href="./images/icons.svg#icon-instagram"></use>
                                             </svg>
-                                        </li>
-                                        <li class="member-info-social-icon-item">
-                                            <svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-media-item">
+                                        <a href="#" class="social-media-link">
+                                            <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
                                                 <use href="./images/icons.svg#icon-twitter"></use>
                                             </svg>
-                                        </li>
-                                        <li class="member-info-social-icon-item">
-                                            <svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-media-item">
+                                        <a href="#" class="social-media-link">
+                                            <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
                                                 <use href="./images/icons.svg#icon-facebook"></use>
                                             </svg>
-                                        </li>
-                                        <li class="member-info-social-icon-item">
-                                            <svg>
+                                        </a>
+                                    </li>
+                                    <li class="social-media-item">
+                                        <a href="#" class="social-media-link">
+                                            <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
                                                 <use href="./images/icons.svg#icon-linkedin"></use>
                                             </svg>
-                                        </li>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -160,28 +168,38 @@
                         <div class="team-card-name">
                             <h3 class="header-three">Tom Ford</h3>
                             <p class="body-text">Frontend Developer</p>
-                            <div class="member-info-social-icon-container">
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </div>
+                                <div class="member-info-social-icon-container">
+                                    <ul class="social-media-list">
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                         </div>
                     </li>
 
@@ -190,28 +208,38 @@
                         <div class="team-card-name">
                             <h3 class="header-three">Camila Garcia</h3>
                             <p class="body-text">Marketing</p>
-                            <div class="member-info-social-icon-container">
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </div>
+                                <div class="member-info-social-icon-container">
+                                    <ul class="social-media-list">
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                         </div>
                     </li>
 
@@ -220,28 +248,38 @@
                         <div class="team-card-name">
                             <h3 class="header-three">Daniel Wilson</h3>
                             <p class="body-text">UI Designer</p>
-                            <div class="member-info-social-icon-container">
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-instagram"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-twitter"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-facebook"></use>
-                                    </svg>
-                                </a>
-                                <a href="" class="member-info-social-icon-item">
-                                    <svg>
-                                        <use href="./images/icons.svg#icon-linkedin"></use>
-                                    </svg>
-                                </a>
-                            </div>
+                                <div class="member-info-social-icon-container">
+                                    <ul class="social-media-list">
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="social-media-item">
+                                            <a href="#" class="social-media-link">
+                                                <svg class="social-media-icon" width="16" height="16" fill="#f4f4fd">
+                                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                         </div>
                     </li>
                 </ul>
